clang/test/BSC/Positive/Method/ambiguous_1/ambiguous_1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: FileCheck --input-file=%t-rw.c %s
// RUN: %clang_cc1 %t-rw.c -o %t-rw.output
// expected-no-diagnostics

long int::getA1() {
  return 1;
};

unsigned int::getA2() {
  return 1;
};

short int::getA3() {
  return 1;
};

int main() {
  return 0;
};

// CHECK: long int_getA1(void) {
// CHECK-NEXT:   return 1;
// CHECK-NEXT: }

// CHECK: unsigned int int_getA2(void) {
// CHECK-NEXT:   return 1;
// CHECK-NEXT: }

// CHECK: short int_getA3(void) {
// CHECK-NEXT:   return 1;
// CHECK-NEXT: }
