clang/test/BSC/Negative/Method/definition_1/definition_1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// expected-no-diagnostics

struct Foo1 {
  int a;
};

enum Foo2 {
  a,
};

union Foo3 {
  int a;
};

int struct Foo1::getA1() {
  return 0;
}

int enum Foo2::getA2() {
  return 0;
}

int union Foo3::getA3() {
  return 0;
}

int int::getA4() {
  return 0;
}

int float::getA5() {
  return 0;
}

int char::getA6() {
  return 0;
}

int unsigned::getA7() {
  return 0;
}

int double::getA8() {
  return 0;
}

int long::getA9() {
  return 0;
}

int short::getA0() {
  return 0;
}

int main() {
  return 0;
}
